--- a/main.css
+++ b/main.css
@@ -88,12 +88,13 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 #player {
-    background-image: url(https://github.com/MoisesSunza/Chafa-tale/tree/main/Assets/Heart.png);
+    background-image: url(https://moisessunza.github.io/Chafa-tale/Assets/Heart.png);
     background-size: cover;
 }
 
 #enemy {
-    background-image: url(https://github.com/MoisesSunza/Chafa-tale/tree/main/Assets/Annoying.webp);
+    background-image: url(https://moisessunza.github.io/Chafa-tale/Assets/Annoying.webp);
     background-size: cover;
 }
+
 
